--- a/overlay/index.html
+++ b/overlay/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Overlay</title>
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
   </head>
   <body>
     <div id="app"></div>
