--- a/overlay/index.html
+++ b/overlay/index.html
@@ -2,12 +2,38 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <title>Overlay</title>
-    <script
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Live Image - Overlay</title>
+    <meta
+      name="description"
+      content="Interactive live image overlay for displaying real-time content"
+    />
+    <meta name="keywords" content="overlay, live, image, streaming, display" />
+    <meta name="author" content="Quentin Juarez" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Live Image - Overlay" />
+    <meta
+      property="og:description"
+      content="Interactive live image overlay for displaying real-time content"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Live Image - Overlay" />
+    <meta
+      name="twitter:description"
+      content="Interactive live image overlay for displaying real-time content"
+    />
+
+    <!-- <script
       async
       src="https://platform.twitter.com/widgets.js"
       charset="utf-8"
-    ></script>
+    ></script> -->
+
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   </head>
   <body>
     <div id="app"></div>
