--- a/extension/popup/index.html
+++ b/extension/popup/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Popup</title>
+    <title>Live Image - Popup</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body class="p-4 bg-gray-100 text-gray-900 w-90">
+  <body class="p-0 m-0 bg-white text-black w-90 font-inter">
     <div id="app"></div>
     <script type="module" src="./popup.ts"></script>
   </body>
